--- a/index.html
+++ b/index.html
@@ -325,6 +325,7 @@
             { symbol: 'SKYAI', address: '0x92aa03137385f18539301349dcfc9ebc923ffb10' },
             { symbol: 'AGT', address: '0x5dbde81fce337ff4bcaaee4ca3466c00aecae274' },
             { symbol: 'SOON', address: '0xb9e1fd5a02d3a33b25a14d661414e6ed6954a721' },
+            { symbol: 'XTER', address: '0x103071Da56e7cD95b415320760D6a0dDC4DA1ca5' },
         ];
         
         // 初始化代币下拉框
