--- a/index.html
+++ b/index.html
@@ -323,9 +323,10 @@
             { symbol: 'B2', address: '0x783c3f003f172c6Ac5AC700218a357d2D66Ee2a2' },
             { symbol: 'KOGE', address: '0xe6DF05CE8C8301223373CF5B969AFCb1498c5528' },
             { symbol: 'SKYAI', address: '0x92aa03137385f18539301349dcfc9ebc923ffb10' },
-            { symbol: 'AGT', address: '0x5dbde81fce337ff4bcaaee4ca3466c00aecae274' },
             { symbol: 'SOON', address: '0xb9e1fd5a02d3a33b25a14d661414e6ed6954a721' },
             { symbol: 'XTER', address: '0x103071Da56e7cD95b415320760D6a0dDC4DA1ca5' },
+            { symbol: 'AGT', address: '0x5dbde81fce337ff4bcaaee4ca3466c00aecae274' },
+            { symbol: 'BANK', address: '0x3AeE7602b612de36088F3ffEd8c8f10E86EbF2bF' },
         ];
         
         // 初始化代币下拉框
