--- a/index.html
+++ b/index.html
@@ -327,6 +327,9 @@
             { symbol: 'XTER', address: '0x103071Da56e7cD95b415320760D6a0dDC4DA1ca5' },
             { symbol: 'AGT', address: '0x5dbde81fce337ff4bcaaee4ca3466c00aecae274' },
             { symbol: 'BANK', address: '0x3AeE7602b612de36088F3ffEd8c8f10E86EbF2bF' },
+            { symbol: 'TAIKO', address: '0x30c60b20c25b2810ca524810467a0c342294fc61' },
+            { symbol: 'SQD', address: '0xe50e3d1a46070444f44df911359033f2937fcc13' },
+            { symbol: 'ZRC', address: '0xdac991621fd8048d9f235324780abd6c3ad26421' },
         ];
         
         // 初始化代币下拉框
