--- a/index.html
+++ b/index.html
@@ -681,9 +681,9 @@
         // 更新浏览器标题以显示最大输出量
         function updateTitle(maxAmountOut) {
             if (maxAmountOut === '-' || maxAmountOut === '') {
-                document.title = 'OKX DEX询价工具 - 图表版';
+                document.title = '询价';
             } else {
-                document.title = `OKX DEX询价工具 - 最大输出: ${maxAmountOut}`;
+                document.title = `${maxAmountOut}`;
             }
         }
         
