--- a/index.html
+++ b/index.html
@@ -319,6 +319,7 @@
         const tokenList = [
             { symbol: 'WBNB', address: '0xbb4CdB9CBd36B01bD1cBaEBF2De08d9173bc095c' },
             { symbol: 'USDT', address: '0x55d398326f99059fF775485246999027B3197955' },
+            { symbol: 'AB', address: '0x95034f653d5d161890836ad2b6b8cc49d14e029a' },
             { symbol: 'ZKJ', address: '0xC71B5F631354BE6853eFe9C3Ab6b9590F8302e81' },
             { symbol: 'B2', address: '0x783c3f003f172c6Ac5AC700218a357d2D66Ee2a2' },
             { symbol: 'KOGE', address: '0xe6DF05CE8C8301223373CF5B969AFCb1498c5528' },
